# app/document/swagger.json
@@ -165,6 +165,50 @@
                 }
             }
         },
+        "auth-resetPassword": {
+            "post": {
+                "tags": [
+                    "oauth"
+                ],
+                "summary": "\u627e\u56de\u7528\u6237\u767b\u5f55\u5bc6\u7801",
+                "description": "\u627e\u56de\u7528\u6237\u767b\u5f55\u5bc6\u7801",
+                "operationId": "resetPassword",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "phone",
+                        "in": "formData",
+                        "description": "\u624b\u673a\u53f7",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "code",
+                        "in": "formData",
+                        "description": "\u9a8c\u8bc1\u7801",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "newPassword",
+                        "in": "formData",
+                        "description": "\u65b0\u5bc6\u7801",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{'state':{\u7ed3\u679c\u4ee3\u7801},'result':{\u8fd4\u56de\u7ed3\u679c}}"
+                    }
+                }
+            }
+        },
         "index-banner": {
             "get": {
                 "tags": [
